swagger for authors implementation
